k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: platform-engineering-lab-worker:resilience-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  selector:
    app: worker
  ports:
    - name: metrics
      port: 9091
      targetPort: 9091
